--- a/src/Pages/login.scss
+++ b/src/Pages/login.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Kanit:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
 .login-container{
     background-color: blueviolet;
