--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+
+@mixin mobile{
+    @media screen and (max-width: 480px){
+        @content;
+    }
+}
+
+@mixin tablet{
+    @media screen and (max-width: 786px){
+        @content;
+    }
+}
+
+@mixin laptop{
+    @media screen and (max-width: 1200px){
+        @content;
+    }
+}
+
 *{
     margin: 0;
     padding: 0;
+}
+
+.app{
+    width: 100%;
+    height: 100vh;
+    background-color: #ea00ff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .home-container{
+        background-color: #3c3d61;
+        // border-radius: 10px;
+        border: 1px solid;
+        overflow: hidden;
+        display: flex;
+        width: 100%;
+        height: 99.8%;
+    }
 }
