--- a/src/components/left/leftstyle.scss
+++ b/src/components/left/leftstyle.scss
@@ -23,7 +23,7 @@
     flex:1;
     border: 1px solid black;
     background-color: black;
-    // border-radius: 10px;
+    max-width: 35%;
     @include tablet{
         width: 90%;
         position: relative;
@@ -132,16 +132,7 @@
             background-color: #373945;
             cursor: pointer;
         }
-
-        p{
-            padding-top: 3px;
-            max-width: fit-content;
-            @include tablet{
-                max-width: fit-content;
-                font-size: 0.8rem;
-            }
-        }
-
+        
         img{
             width: 35px;
             height: 35px;
@@ -151,7 +142,15 @@
                 height: 35px;
             }
         }
-
+        
+        p{
+            padding-top: 3px;
+            word-break: break-all;
+            overflow-y: hidden;
+            @include tablet{
+                font-size: 0.8rem;
+            }
+        }
     }
 
 
@@ -193,5 +192,9 @@
             width: 35px;
             height: 35px;
         }
+    }
+
+    .list-chat{
+        font-family: 'Ubuntu', sans-serif;
     }
 }
