--- a/src/components/right/rightstyles.scss
+++ b/src/components/right/rightstyles.scss
@@ -115,6 +115,8 @@
         }
 
         .chatImage{
+            height: 30vh;
+            width: 40vh;
             border-radius: 10px 10px 10px 10px;
         }
 
