--- a/src/Pages/register.scss
+++ b/src/Pages/register.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Kanit:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
 
 @mixin mobile{
     @media screen and (max-width: 480px){
@@ -41,7 +42,7 @@
         .register-title , .register-title2{
             color: white;
             padding: 2px;
-            font-family: 'Courgette', cursive;
+            font-family: 'Kalam', cursive;
         }
 
         .register-title2{
@@ -109,7 +110,15 @@
                     color: black;
                 }
             }
+
         }
+        
+        .reg-temp{
+            color: white;
+            font-family: "Kanit", sans-serif;
+            font-size: 1.1rem;
+        }
+        
         background-color: #397FF9;
         padding: 20px;
         height: fit-content;
