--- a/src/Pages/register.scss
+++ b/src/Pages/register.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
+// @import url('./src/assets/MATESAPP.png');
 
 @mixin mobile{
     @media screen and (max-width: 480px){
